@@ -16,14 +16,15 @@
 
 package com.hazelcast.platform.demos.banking.trademonitor;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Properties;
 import java.util.UUID;
 
+import com.hazelcast.config.ClasspathYamlConfig;
+import com.hazelcast.config.Config;
 import com.hazelcast.config.JoinConfig;
+import com.hazelcast.config.NetworkConfig;
 import com.hazelcast.config.TcpIpConfig;
-import com.hazelcast.jet.config.JetConfig;
-import com.hazelcast.jet.impl.config.YamlJetConfigBuilder;
 
 import org.apache.kafka.clients.consumer.ConsumerConfig;
 import org.apache.kafka.common.serialization.StringDeserializer;
@@ -51,10 +52,11 @@ public class ApplicationConfig {
      * for more details.
      * </p>
      */
-    public static JetConfig buildJetConfig() {
-        JetConfig jetConfig = new YamlJetConfigBuilder().build();
+    public static Config buildConfig() {
+        Config config = new ClasspathYamlConfig("hazelcast.yml");
 
-        JoinConfig joinConfig = jetConfig.getHazelcastConfig().getNetworkConfig().getJoin();
+        JoinConfig joinConfig = config.getNetworkConfig().getJoin();
+        NetworkConfig networkConfig = config.getNetworkConfig();
 
         if (System.getProperty("my.kubernetes.enabled", "").equals("true")) {
             LOGGER.info("Kubernetes configuration: service-dns: {}",
@@ -64,23 +66,16 @@ public class ApplicationConfig {
 
             TcpIpConfig tcpIpConfig = new TcpIpConfig();
             tcpIpConfig.setEnabled(true);
-            if (System.getProperty("hazelcast.local.publicAddress", "").length() != 0) {
-                String publicAddress = System.getProperty("hazelcast.local.publicAddress");
-                String dockerHost = publicAddress.split(":")[0];
-                String port = publicAddress.split(":")[1];
-                tcpIpConfig.setMembers(Arrays.asList(dockerHost + ":5701", dockerHost + ":5702", dockerHost + ":5703"));
-                jetConfig.getHazelcastConfig().getNetworkConfig().setPort(Integer.parseInt(port));
-            } else {
-                tcpIpConfig.setMembers(Arrays.asList("127.0.0.1"));
-            }
+            String host = System.getProperty("hazelcast.local.publicAddress", "127.0.0.1");
+            host = host.replaceAll("5703", "5701").replaceAll("5702", "5701");
+            tcpIpConfig.setMembers(List.of(host));
 
-            joinConfig.setTcpIpConfig(tcpIpConfig);
+            networkConfig.getJoin().setTcpIpConfig(tcpIpConfig);
 
-            LOGGER.info("Non-Kubernetes configuration: member-list: {}",
-                    tcpIpConfig.getMembers());
+            LOGGER.info("Non-Kubernetes configuration: member-list: {}", tcpIpConfig.getMembers());
         }
 
-        return jetConfig;
+        return config;
     }
 
     /**
